[package]
    name   ="test_rust"
    version="0.1.0"
    edition="2021"

[profile.release]
    lto          =true
    codegen-units=1
    strip        ="debuginfo"

[profile.dev.package."*"]
    opt-level=3

[dependencies.windows]
    version="0.48"
    features=[
        "Data_Xml_Dom",
        "Win32_Foundation",
        "Win32_Graphics",
        "Win32_Graphics_Gdi",
        "Win32_Security",
        "Win32_System_Threading",
        "Win32_UI_WindowsAndMessaging",
    ]
[dependencies]
    # opencv = "0.82.1"
    pyo3="0.20"
    winapi={version="0.3.9", features=[
        "winuser",
        "libloaderapi",
        "shellapi",
        "winerror",
        "dwmapi",
        "shellscalingapi",
    ]}
    # windows = {version = "0.48.0",features = ["win32"] }
    # opencv = {version = "*", features = ["buildtime-bindgen"]}

    # mnist = {version = "0.5.0",features = ["download"]}
    ndarray ="*"
    nalgebra="*"
    anyhow  ="1"

    image     ="0.24.6"
    show-image={version="*", features=["image"]}
    # show-image = "*"
    screenshots="0.7.0"
    lazy_static="1.4.0"
    winit      ="0.28.6"
    minifb     ="*"

    rand     ="0.8"
    once_cell="*"

    regex="*"
    syn  ={version="2.0.26", features=["full", "extra-traits"]}
    quote="1.0"

    rusqlite={version="0.30.0", features=["bundled"]}

    # （反）序列化
    serde     ={version="1.0", features=["derive"]}
    serde_json="1.0"

    meilisearch-sdk="0.24.3"

    tokio  ={version="1", features=["full"]}
    futures="*"

    gstreamer       ="0.21"
    gstreamer-player="0.21"
    urlencoding     ="2.1"

    # gstreamer-pbutils = "0.19"
