[package]
    name   ="test_rust"
    version="0.1.0"
    edition="2021"

[profile.release]
    lto          =true
    codegen-units=1
    strip        ="debuginfo"

[profile.dev.package."*"]
    opt-level=3

[dependencies.windows]
    version="0.48"
    features=[
        "Data_Xml_Dom",
        "Win32_Foundation",
        "Win32_Graphics",
        "Win32_Graphics_Gdi",
        "Win32_Security",
        "Win32_System_Threading",
        "Win32_UI_WindowsAndMessaging",
    ]
[dependencies]
    # opencv = "0.82.1"
    # pyo3="0.20"
    # winapi={version="0.3.9", features=[
    #     "winuser",
    #     "libloaderapi",
    #     "shellapi",
    #     "winerror",
    #     "dwmapi",
    #     "shellscalingapi",
    # ]}
    # # windows = {version = "0.48.0",features = ["win32"] }
    # # opencv = {version = "*", features = ["buildtime-bindgen"]}

    # # mnist = {version = "0.5.0",features = ["download"]}
    # ndarray ="*"
    # nalgebra="*"
    anyhow  ="1"

    # image     ="0.24.6"
    # show-image={version="*", features=["image"]}
    # # show-image = "*"
    # screenshots="0.7.0"
    # lazy_static="1.4.0"
    # winit      ="0.28.6"
    # minifb     ="*"

    # rand     ="0.8"
    # once_cell="*"

    # rusqlite={version="0.30.0", features=["bundled"]}

    # # （反）序列化
    serde     ={version="1.0", features=["derive"]}
    serde_json="1.0"

    # meilisearch-sdk="0.24.3"

    tokio={version="1", features=["full"]}
    # futures="*"
    futures-util="0.3.30"

    # # TODO: build failed
    # # gstreamer       ="0.22"
    # # gstreamer-player="0.22"
    # # urlencoding     ="2.1"

    # # gstreamer-pbutils = "0.19"

    reqwest={version="0.11", features=["json", "blocking"]}
    # base64 ="0.13"

    # m3u_parser="*"

    # matrixmultiply="*"

    # # 宏
    # macro_magic={version="0.5", features=["proc_support"]}

    # # trait-variable-macros={git="https://github.com/dbsxdbsx/trait_variable_macros.git", features=[]}
    # trait_variable={git="https://github.com/dbsxdbsx/trait_variable.git", features=[]}
    # # trait_variable="*"
    # paste      ="1.0.5"
    # proc-macro2="1.0"
    # # syn        ={version="1.0.82", features=["full"]}
    # syn  ={version="2.0.26", features=["full", "extra-traits"]}
    # quote="1.0.10"
    regex="*"

    # #
    # enum_dispatch="0.3.12"

    # supertrait = "0.1.0"

    command_runner="0.1.4"
    duct          ="0.13.7"

    encoding_rs   ="0.8"
    encoding_rs_io="0.1"

    public-ip-address="0.3.2"
    dns-lookup       ="1.0.8"
    url              ="2.3.1"
    public-ip        ={version="0.2", features=["http-resolver"]}
